--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'all-checks-passed-action'
+description: 'A GitHub action that passes when all checks pass'
+author: 'Comtravo'
 inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+  ignore_checks:
+    required: false
+    description: 'stringified JSON array of checks to ignore'
+    default: '[]'
 runs:
   using: 'node12'
   main: 'dist/index.js'
