--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "@actions/github": "^4.0.0",
+    "@octokit/core": "^3.3.0",
+    "@octokit/rest": "^18.3.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
