--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "@octokit/core": "^3.3.0",
-    "@octokit/rest": "^18.3.5"
+    "@octokit/rest": "^18.3.5",
+    "@octokit/webhooks": "^8.5.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
