--- a/.github/workflows/check_run.yml
+++ b/.github/workflows/check_run.yml
@@ -1,14 +1,13 @@
-name: 'check_run'
+name: success-check
 on:
   check_run:
-    # types:
-    #   - completed
-
+    type: [completed]
 jobs:
-  check_suite_job:
+  checkForSuccess:
+    name: success-check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Check
+      uses: arup-group/action-all-checks-passed@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
