--- a/.github/workflows/check_run.yml
+++ b/.github/workflows/check_run.yml
@@ -1,13 +1,12 @@
 name: success-check
 on:
-  check_run:
-    type: [completed]
+  status:
 jobs:
   checkForSuccess:
     name: success-check
     runs-on: ubuntu-latest
     steps:
-    - name: Check
-      uses: arup-group/action-all-checks-passed@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - uses: ./
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
