--- a/.github/workflows/check_run.yml
+++ b/.github/workflows/check_run.yml
@@ -1,11 +1,11 @@
-name: success-check
-on: status
-jobs:
-  checkForSuccess:
-    name: success-check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# name: success-check
+# on: status
+# jobs:
+#   checkForSuccess:
+#     name: success-check
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: ./
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
