--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,10 @@ Thumbs.db
 # Ignore built ts files
 __tests__/runner/*
 lib/**/*
+
+# Terraform
+**/.terraform/*
+**/*.tfstate
+**/*.tfstate.backup
+*.zip
+
