--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@octokit/types": "^6.12.2",
     "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.9",
     "@types/pino": "^6.3.6",
+    "@types/sinon": "^9.0.11",
     "@typescript-eslint/parser": "^4.8.1",
     "@vercel/ncc": "^0.25.1",
     "eslint": "^7.17.0",
@@ -50,7 +52,9 @@
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "js-yaml": "^3.14.0",
+    "lodash": "^4.17.21",
     "prettier": "2.2.1",
+    "sinon": "^9.2.4",
     "ts-jest": "^26.4.4",
     "typescript": "^4.2.3"
   }
